--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,22 +1,3 @@
-<!--<div class="container col mx-auto">
-    <div class="card bg-dark">
-        <div class="card-header">
-            <h3>Order List</h3>           
-        </div>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item list-group-item-action"
-                *ngFor="let o of orders.slice().reverse() let i = index" 
-                (click)="selected(o)"
-                [class.active]="o==selectedOrder">
-               <p>Order ID: {{o.userOrders[i].orderID}}</p>              
-               <p>Order Total: {{o.userOrders[i].orderPrice}}</p>  
-               <a routerLink="/userOrders/{{o.userOrders[i].orderID}}" class="stretched-link"></a>             
-            </li>
-         </ul>
-    </div>
-</div>-->
 <div class="container">
     <div class="py-5 text-center">
         <h1 class="display-1 justify-content-center">
@@ -28,18 +9,20 @@
     <div class="container">
         <div class="card bg-dark col-6 mx-auto">
             <div class="card-body">
-                <p>Order ID: {{u.username}}</p>                            
+                <p>User: {{u.username}}</p>                            
             </div>                
         </div>
-        
-            <div class="ng-container" *ngFor="let o of u.userOrders let i = index">
-                <div class="card bg-dark">
-                    <p>Order: {{o.orderID}}</p>
+        <br>
+        <div class="ng-container" *ngFor="let o of u.userOrders let i = index">
+            <div class="card bg-dark  col-6 mx-auto">
+                <div class="card-body">
+                    <p>Order ID: {{o.orderID}}</p>
+                    <p>Order Date: {{o.orderDate}}</p>
                 <a routerLink="/userOrders/{{o.orderID}}" class="stretched-link"></a>
-                <br>
-                </div>                
+                </div>
             </div>
-          
+            <br>                
+        </div>     
     </div> 
     <br>         
 </ng-container>
