--- a/src/app/placed-order/placed-order.component.html
+++ b/src/app/placed-order/placed-order.component.html
@@ -1,4 +1,9 @@
+<br>
 <div class="container">
-    <h1 class="display-1">Thank you for your purchase!</h1>
-    <h2>Please check Orders to find your Purchased Keys!</h2> 
+    <div class="card bg-dark">
+        <div class="card-body">
+            <h1 class="display-1">Thank you for your purchase!</h1>
+            <h2>Please check Orders to find your Purchased Keys!</h2>
+        </div>
+    </div> 
 </div>
