--- a/src/app/orders-user/orders-user.component.html
+++ b/src/app/orders-user/orders-user.component.html
@@ -5,17 +5,23 @@
        </h1>
     </div> 
 </div>  
-<ng-container *ngFor="let o of user.userOrders.reverse() let i = index">
-    <div class="container">
-        <div class="card bg-dark col-6 mx-auto">
-            <div class="card-body">
-                <p>Order ID: {{o.orderID}}</p>
-                <p>Order Date: {{o.orderDate}}</p>               
-                <p>Order Total: €{{o.orderPrice}}</p>
-                <a routerLink="/userOrders/{{o.orderID}}" class="stretched-link"></a>
-            </div>       
+<div class="col-3 mx-auto">
+    <div class="card bg-dark">
+        <div class="card-header">
+            <h3>Order List</h3>  
         </div>
-    </div> 
-    <br>         
-</ng-container>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-action" *ngFor="let o of user.userOrders.reverse() let i = index">
+                <span>Order ID: {{o.orderID}}</span><br>
+                <span>Order Date: {{o.orderDate |  date:'dd/MM/yyyy'}}</span><br>               
+                <h6>Order Total: €{{o.orderPrice}}</h6>
+                <a routerLink="/userOrders/{{o.orderID}}" class="stretched-link"></a>
+            </li>
+        </ul>           
+    </div>
+</div>            
+
+
 
