--- a/src/app/customer-profile-page/customer-profile-page.component.html
+++ b/src/app/customer-profile-page/customer-profile-page.component.html
@@ -18,6 +18,10 @@
     </div>
 </div>
 
+<h1>File Upload</h1>
+<input type="file" (change)="onFileSelected($event)">
+<button type="button" (click)="onUpload()">Upload</button>
+
     
 
 
