--- a/src/app/customer-profile-page/customer-profile-page.component.html
+++ b/src/app/customer-profile-page/customer-profile-page.component.html
@@ -17,10 +17,19 @@
         </div>       
     </div>
 </div>
-
-<h1>File Upload</h1>
-<input type="file" (change)="onFileSelected($event)">
-<button type="button" (click)="onUpload()">Upload</button>
+<div class="container">
+    <hr>
+</div>
+<div class="container">
+    <div class="card bg-dark col-6 mx-auto">
+        <div class="card-body">
+            <h1>Profile Image</h1>
+            <input class="form-control" type="file" (change)="onFileSelected($event)">
+            <hr>
+            <button class="btn btn-primary" type="button" (click)="onUpload()">Upload</button>
+        </div>
+    </div>
+</div>
 
     
 
