--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -24,5 +24,8 @@
         <h4>About</h4>
         <p>{{game.gameDesc}}</p>
         <br>
+
+        <app-add-comments [comments]="comment" class="col"></app-add-comments>              
     </div>
 </div>
+
