--- a/src/app/customer-profile-page/customer-profile-page.component.html
+++ b/src/app/customer-profile-page/customer-profile-page.component.html
@@ -5,32 +5,32 @@
         </h1>
     </div>
 </div>
-<div class="container">
-    <div class="card bg-dark col-6 mx-auto">
-        <div class="card-body">
+<div *ngIf="loaded==true">
+    <div class="container">
+        <div class="card bg-dark col-6 mx-auto">
+            <div class="card-body">
                 <h3>Username: <b>{{user.username}}</b></h3>
                 <h3>Name: {{user.userFirstname}}</h3>
                 <h3>Surname: {{user.userSurname}}</h3>
                 <h3>DOB: {{user.userDOB}}</h3>
                 <h3>Gender: {{user.userGender}}</h3>
                 <h3>Email: {{user.userEmail}}</h3>
-        </div>       
-    </div>
-</div>
-<div class="container">
-    <hr>
-</div>
-<div class="container">
-    <div class="card bg-dark col-6 mx-auto">
-        <div class="card-body">
-            <h1>Profile Image</h1>
-            <input class="form-control" type="file" (change)="onFileSelected($event)">
-            <hr>
-            <button class="btn btn-primary" type="button" (click)="onUpload()">Upload</button>
+            </div>
         </div>
     </div>
+    <div class="container">
+        <hr>
+    </div>
+    <div class="container">
+        <div class="card bg-dark col-6 mx-auto">
+            <div class="card-body">
+                <h1>Profile Image</h1>
+                <input class="form-control" type="file" (change)="onFileSelected($event)">
+                <hr>
+                <button class="btn btn-primary" type="button" (click)="onUpload()">Upload</button>
+            </div>
+        </div>
+    </div>
+
 </div>
-
-    
-
-
+<app-loading-screen *ngIf="loaded==false"></app-loading-screen>
