--- a/src/app/game-list-page/game-list-page.component.html
+++ b/src/app/game-list-page/game-list-page.component.html
@@ -1,5 +1,5 @@
 <app-genres-select (chosenGenreEvent)="this.chosenGenre=$event" (rangeChangeEvent)="this.priceRangeMin=$event[0];this.priceRangeMax=$event[1]" (nameTextEvent)="this.nameText=$event"></app-genres-select>
-<div class="container py-5 justify-content-center">
+<div *ngIf="loaded==true" class="container py-5 justify-content-center">
     <div class="row row-cols-sm-4 g-3">
         <ng-container *ngFor="let g of games | genreFilter:this.chosenGenre | priceRange:this.priceRangeMin:this.priceRangeMax | searchFilter: this.nameText; let i = index">
             <div class="col-sm">
@@ -17,3 +17,4 @@
         </ng-container>
     </div>
 </div>
+<app-loading-screen *ngIf="loaded==false"></app-loading-screen>
