setitng up publisher

--- a/src/app/supplier-page/supplier-page.component.html
+++ b/src/app/supplier-page/supplier-page.component.html
@@ -8,6 +8,6 @@
 <div class="container">
     <div class="row">
         <app-game (game)="getGame($event)" class="col"></app-game>
-        <app-add-games [game]="game" class="col"></app-add-games>
+        <app-supplier-details [game]="game" class="col"></app-supplier-details>
     </div>
 </div>
