--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -21,6 +21,9 @@
                     <a class="nav-link text-white mr-3" routerLink="addKeys">Add Keys</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-white mr-3" routerLink="publishers">Publishers</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="orders">Orders</a>
                 </li>
             </ul>
