--- a/src/app/supplier-details/supplier-details.component.html
+++ b/src/app/supplier-details/supplier-details.component.html
@@ -7,32 +7,17 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="gameID">Game ID</label>
-                    <input type="text" name="gameID" class="form-control" [readonly]=true>
+                    <input type="text" name="gameID" class="form-control" [(ngModel)]="game.gameID" [readonly]=true>
                 </div>
 
                 <div class="form-group">
-                    <label for="gameName">Game Name</label>
-                    <input type="text" name="gameName" class="form-control" >
+                    <label for="gameName">Publisher Name</label>
+                    <input type="text" name="pubName" class="form-control" >
                 </div>
 
                 <div class="form-group">
                     <label for="gameDescription">Game Description</label>
-                    <input type="text" name="gameDesc" class="form-control" >
-                </div>
-
-                <div class="form-group">
-                    <label for="gamePrice">Game Price</label>
-                    <input type="number" name="gamePrice" class="form-control">
-                </div>
-
-                <div class="form-group">
-                    <label for="gamePic">Game Image</label>
-                    <input type="text" name="gamePic" class="form-control" >
-                </div>
-                <div class="form-group">
-                    <br>
-                    <input type="checkbox" name="gameHidden">
-                    <label for="gameHidden">Hidden</label>
+                    <input type="text" name="pubEmail" class="form-control" >
                 </div>
             </div>
 
