--- a/src/app/add-comments/add-comments.component.html
+++ b/src/app/add-comments/add-comments.component.html
@@ -3,7 +3,7 @@
         <div class="form-group">
             <h4>Leave a comment</h4> 
             <label for="comment">Message</label> 
-            <textarea type="text" name="comment" rows="10" [(ngModel)]="comment" class="form-control" style="background-color: black;"></textarea>
+            <textarea type="text" name="comment" rows="10" [(ngModel)]="comment" class="form-control"></textarea>
         </div>              
         <button class="btn btn-primary" type="button" (click)="addComments()">Post comment</button>
     </form>
