--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="card-footer">
-            <button class="btn btn-success" (click)="submit()">Login</button>
+            <button class="btn btn-success" id="loginbtn" (click)="submit()">Login</button>
             <br><br>
             <p>No account? <a href="/register">Register</a></p>
             <p>If you forgot your password, <a href="https://game-store.auth.us-east-1.amazoncognito.com/forgotPassword?client_id=1dt06sc8ku8m5q6djfjn9op03o&response_type=code&scope=aws.cognito.signin.user.admin+email+openid+profile&redirect_uri=localhost:4200">Click here</a></p>
