--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,34 +1,31 @@
 <ng-container *ngIf="games.length != 0">
     <br>
     <div class="container">
-            <div class="card-table">
-                <div class="cart-product">
-                    <table class="table table-striped table-dark table-responsive border-secondary">
-                        <thead>
-                            <tr>
-                                <th>Product Name</th>
-                                <th>Price</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of games; let i = index">
-                                <td>{{item.gameName}}</td>
-                                <td>{{item.gamePrice}}</td>
-                                <td>
-                                    <button (click)="removeItem(item)" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="container m-3">
-                        <h4>Total: €{{finalTotal}}</h4>
-                    </div>
-                    <button class="btn btn-danger m-3" (click)="emptyCart()">Empty Cart</button>
-                    <button class="btn btn-primary m-3" routerLink="/games">Add More</button>
-                    <button class="btn btn-success m-3" routerLink="/checkout">Checkout</button>
-                </div>
-            </div>
+        <table class="table bg-dark text-white rounded">   
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Product Name</th>
+                    <th>Price</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of games; let i = index">
+                    <td><img src="{{item.gamePic}}" width="90px mx-auto"></td>
+                    <td>{{item.gameName}}</td>
+                    <td>{{item.gamePrice}}</td>
+                    <td>
+                        <button (click)="removeItem(item)" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                    </td>
+                </tr>
+            </tbody>
+                
+                <h3>Total: €{{finalTotal}}</h3>
+                <button class="btn btn-danger" (click)="emptyCart()">Empty Cart</button>
+                <button class="btn btn-primary" routerLink="/games">Add More</button>
+                <button class="btn btn-success" routerLink="/checkout">Checkout</button>
+        </table>
     </div>
 </ng-container>
 
