fixed bootstrap and slider

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,11 +10,11 @@ body {
     -moz-font-feature-settings: "liga" on; 
 }
 
-.bg-dark{
+/* .bg-dark{
     background-color: #232323 !important;
 }
 
 .btn-dark{
     background-color: #232323 !important;
     
-}
+} */
