--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="games.length != 0">
     <br>
-    <div class="container">
-        <table class="table bg-dark text-white rounded">   
+    <div class="container bg-dark rounded col-6">
+        <table class="table text-white">
             <thead>
                 <tr>
                     <th></th>
@@ -12,7 +12,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let item of games; let i = index">
-                    <td><img src="{{item.gamePic}}" width="90px mx-auto"></td>
+                    <td><img src="{{item.gamePic}}" alt="" width="90px"></td>
                     <td>{{item.gameName}}</td>
                     <td>{{item.gamePrice}}</td>
                     <td>
@@ -20,20 +20,21 @@
                     </td>
                 </tr>
             </tbody>
-                <h3>Total: €{{finalTotal}}</h3>
-                <button class="btn btn-danger" (click)="emptyCart()">Empty Cart</button>
-                <button class="btn btn-primary" routerLink="/games">Add More</button>
-                <button class="btn btn-success" routerLink="/checkout">Checkout</button>
         </table>
+        <div>
+            <div class="container">
+                <h4>Total: €{{finalTotal}}</h4>
+            </div>
+            <button class="btn btn-danger m-3" (click)="emptyCart()">Empty Cart</button>
+            <button class="btn btn-primary m-3" routerLink="/games">Add More</button>
+            <button class="btn btn-success m-3" routerLink="/checkout">Checkout</button>
+        </div>
     </div>
 </ng-container>
 
 <ng-container *ngIf="games.length == 0">
-    <div class="container">
+    <div class="container col-6">
         <div class="card bg-dark">
-            <h5 class="card-title">
-                MyCart
-            </h5>
         </div>
         <div class="center">
             <h4>Cart is Empty</h4>
