--- a/src/app/game-page/game-page.component.css
+++ b/src/app/game-page/game-page.component.css
@@ -7,3 +7,19 @@
     font-size: 12px;
     font-weight: bold;
 }
+
+.star {
+  position: relative;
+  display: inline-block;
+  font-size: 3rem;
+  color: #d3d3d3;
+}
+.full {
+  color: goldenrod;
+}
+.half {
+  position: absolute;
+  display: inline-block;
+  overflow: hidden;
+  color: goldenrod;
+}
